--- a/css/main.css
+++ b/css/main.css
@@ -32,20 +32,20 @@
   --bs-primary: #ffa500;
   --bs-grey: #E6E6E6;
   --bs-body-bg: #212428;
-  --bs-body-color: white;
+  --bs-body-color: #d0d0d0;
   --bs-icon-background: rgba(255, 165, 0, 0.2);
   --bs-icon-color: orange;
   --bs-background-color: black;
   --bs-primary-rgb: 255, 165, 0;
   --bs-grey-rgb: 230, 230, 230;
   --bs-body-bg-rgb: 33, 36, 40;
-  --bs-body-color-rgb: 255, 255, 255;
+  --bs-body-color-rgb: 208, 208, 208;
   --bs-icon-background-rgb: 255, 165, 0;
   --bs-icon-color-rgb: 255, 165, 0;
   --bs-background-color-rgb: 0, 0, 0;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 255, 255, 255;
+  --bs-body-color-rgb: 208, 208, 208;
   --bs-body-bg-rgb: 33, 36, 40;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -54,7 +54,7 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: white;
+  --bs-body-color: #d0d0d0;
   --bs-body-bg: #212428;
   --bs-border-width: 1px;
   --bs-border-style: solid;
@@ -1995,7 +1995,7 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: white;
+  color: #d0d0d0;
   background-color: #212428;
   background-clip: padding-box;
   border: 1px solid #ced4da;
@@ -2017,7 +2017,7 @@ progress {
   cursor: pointer;
 }
 .form-control:focus {
-  color: white;
+  color: #d0d0d0;
   background-color: #212428;
   border-color: #ffd280;
   outline: 0;
@@ -2047,7 +2047,7 @@ progress {
   margin: -0.375rem -0.75rem;
   -webkit-margin-end: 0.75rem;
           margin-inline-end: 0.75rem;
-  color: white;
+  color: #d0d0d0;
   background-color: #e9ecef;
   pointer-events: none;
   border-color: inherit;
@@ -2063,7 +2063,7 @@ progress {
   margin: -0.375rem -0.75rem;
   -webkit-margin-end: 0.75rem;
           margin-inline-end: 0.75rem;
-  color: white;
+  color: #d0d0d0;
   background-color: #e9ecef;
   pointer-events: none;
   border-color: inherit;
@@ -2095,7 +2095,7 @@ progress {
   padding: 0.375rem 0;
   margin-bottom: 0;
   line-height: 1.5;
-  color: white;
+  color: #d0d0d0;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2186,7 +2186,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: white;
+  color: #d0d0d0;
   background-color: #212428;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
@@ -2218,7 +2218,7 @@ textarea.form-control-lg {
 }
 .form-select:-moz-focusring {
   color: transparent;
-  text-shadow: 0 0 0 white;
+  text-shadow: 0 0 0 #d0d0d0;
 }
 
 .form-select-sm {
@@ -2577,7 +2577,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: white;
+  color: #d0d0d0;
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
@@ -2823,7 +2823,7 @@ textarea.form-control-lg {
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
-  --bs-btn-color: white;
+  --bs-btn-color: #d0d0d0;
   --bs-btn-bg: transparent;
   --bs-btn-border-width: 1px;
   --bs-btn-border-color: transparent;
@@ -2936,19 +2936,19 @@ textarea.form-control-lg {
 
 .btn-body-color {
   --bs-btn-color: #000;
-  --bs-btn-bg: white;
-  --bs-btn-border-color: white;
+  --bs-btn-bg: #d0d0d0;
+  --bs-btn-border-color: #d0d0d0;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: white;
-  --bs-btn-hover-border-color: white;
-  --bs-btn-focus-shadow-rgb: 217, 217, 217;
+  --bs-btn-hover-bg: #d7d7d7;
+  --bs-btn-hover-border-color: #d5d5d5;
+  --bs-btn-focus-shadow-rgb: 177, 177, 177;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: white;
-  --bs-btn-active-border-color: white;
+  --bs-btn-active-bg: #d9d9d9;
+  --bs-btn-active-border-color: #d5d5d5;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: white;
-  --bs-btn-disabled-border-color: white;
+  --bs-btn-disabled-bg: #d0d0d0;
+  --bs-btn-disabled-border-color: #d0d0d0;
 }
 
 .btn-icon-background {
@@ -3054,19 +3054,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-body-color {
-  --bs-btn-color: white;
-  --bs-btn-border-color: white;
+  --bs-btn-color: #d0d0d0;
+  --bs-btn-border-color: #d0d0d0;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: white;
-  --bs-btn-hover-border-color: white;
-  --bs-btn-focus-shadow-rgb: 255, 255, 255;
+  --bs-btn-hover-bg: #d0d0d0;
+  --bs-btn-hover-border-color: #d0d0d0;
+  --bs-btn-focus-shadow-rgb: 208, 208, 208;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: white;
-  --bs-btn-active-border-color: white;
+  --bs-btn-active-bg: #d0d0d0;
+  --bs-btn-active-border-color: #d0d0d0;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: white;
+  --bs-btn-disabled-color: #d0d0d0;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: white;
+  --bs-btn-disabled-border-color: #d0d0d0;
   --bs-gradient: none;
 }
 
@@ -3226,7 +3226,7 @@ textarea.form-control-lg {
   --bs-dropdown-padding-y: 0.5rem;
   --bs-dropdown-spacer: 0.125rem;
   --bs-dropdown-font-size: 1rem;
-  --bs-dropdown-color: white;
+  --bs-dropdown-color: #d0d0d0;
   --bs-dropdown-bg: #fff;
   --bs-dropdown-border-color: var(--bs-border-color-translucent);
   --bs-dropdown-border-radius: 0.375rem;
@@ -4684,12 +4684,12 @@ textarea.form-control-lg {
 }
 
 .alert-body-color {
-  --bs-alert-color: #666666;
-  --bs-alert-bg: white;
-  --bs-alert-border-color: white;
+  --bs-alert-color: #535353;
+  --bs-alert-bg: #f6f6f6;
+  --bs-alert-border-color: #f1f1f1;
 }
 .alert-body-color .alert-link {
-  color: #525252;
+  color: #424242;
 }
 
 .alert-icon-background {
@@ -4791,7 +4791,7 @@ textarea.form-control-lg {
   --bs-list-group-action-color: #495057;
   --bs-list-group-action-hover-color: #495057;
   --bs-list-group-action-hover-bg: #f8f9fa;
-  --bs-list-group-action-active-color: white;
+  --bs-list-group-action-active-color: #d0d0d0;
   --bs-list-group-action-active-bg: #e9ecef;
   --bs-list-group-disabled-color: #6c757d;
   --bs-list-group-disabled-bg: #fff;
@@ -5061,17 +5061,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-body-color {
-  color: #666666;
-  background-color: white;
+  color: #535353;
+  background-color: #f6f6f6;
 }
 .list-group-item-body-color.list-group-item-action:hover, .list-group-item-body-color.list-group-item-action:focus {
-  color: #666666;
-  background-color: #e6e6e6;
+  color: #535353;
+  background-color: #dddddd;
 }
 .list-group-item-body-color.list-group-item-action.active {
   color: #fff;
-  background-color: #666666;
-  border-color: #666666;
+  background-color: #535353;
+  border-color: #535353;
 }
 
 .list-group-item-icon-background {
@@ -5629,7 +5629,7 @@ textarea.form-control-lg {
   --bs-popover-header-bg: #f0f0f0;
   --bs-popover-body-padding-x: 1rem;
   --bs-popover-body-padding-y: 1rem;
-  --bs-popover-body-color: white;
+  --bs-popover-body-color: #d0d0d0;
   --bs-popover-arrow-width: 1rem;
   --bs-popover-arrow-height: 0.5rem;
   --bs-popover-arrow-border: var(--bs-popover-border-color);
@@ -5929,8 +5929,8 @@ textarea.form-control-lg {
 .carousel-indicators [data-bs-target] {
   box-sizing: content-box;
   flex: 0 1 auto;
-  width: 30px;
-  height: 3px;
+  width: 12px;
+  height: 12px;
   padding: 0;
   margin-right: 3px;
   margin-left: 3px;
@@ -6689,7 +6689,7 @@ textarea.form-control-lg {
 
 .text-bg-body-color {
   color: #000 !important;
-  background-color: RGBA(255, 255, 255, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(208, 208, 208, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-icon-background {
@@ -6729,10 +6729,10 @@ textarea.form-control-lg {
 }
 
 .link-body-color {
-  color: white !important;
+  color: #d0d0d0 !important;
 }
 .link-body-color:hover, .link-body-color:focus {
-  color: white !important;
+  color: #d9d9d9 !important;
 }
 
 .link-icon-background {
@@ -10832,6 +10832,11 @@ textarea.form-control-lg {
 }
 :root {
   --bs-body-font-family: "Nunito";
+  --bs-body-color:#d0d0d0;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+  color: #fff;
 }
 
 .top-bar {
@@ -10920,6 +10925,19 @@ textarea.form-control-lg {
   margin-bottom: 0px;
 }
 
+.carousel-indicators [data-bs-target] {
+  background-color: #ffa500;
+  border-radius: 50%;
+}
+
+.carousel-control-prev-icon {
+  background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23ffa500"%3e%3cpath d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/%3e%3c/svg%3e');
+}
+
+.carousel-control-next-icon {
+  background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23ffa500"%3e%3cpath d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e');
+}
+
 .social-media-hero {
   letter-spacing: 1px;
 }
@@ -10980,6 +10998,9 @@ textarea.form-control-lg {
   background: linear-gradient(to right bottom, #212428, #16181c);
 }
 
+.features .card-text {
+  color: #d0d0d0;
+}
 .features .card-img-top {
   width: 30% !important;
 }
@@ -10996,6 +11017,14 @@ textarea.form-control-lg {
 .features .card:hover .card-body {
   margin-top: -1.5rem;
   margin-bottom: -2.5rem;
+}
+
+select {
+  border: 2px solid #191b1e;
+  background-color: #191b1e;
+  transition: 0.4s;
+  color: #fff;
+  box-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
 }
 
 .portfolio .card-img-top {
@@ -11022,7 +11051,7 @@ textarea.form-control-lg {
 }
 
 .nav-link {
-  color: var(--bs-body-color);
+  color: #fff;
   font-size: 18px;
 }
 
@@ -11227,4 +11256,16 @@ input[type=text]:focus, input[type=email]:focus, input[type=url]:focus, input[ty
   border: 1px solid var(--bs-alert-border-color);
   border-radius: 0.375rem;
   position: relative;
+}
+
+/*** Modal ***/
+.modal-content {
+  background-color: #212428;
+}
+.modal-content .btn-close {
+  background: transparent url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23fff"%3e%3cpath d="M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z"/%3e%3c/svg%3e') center/1em auto no-repeat;
+}
+
+.modal-header {
+  border-bottom: 1px solid #ffa500;
 }/*# sourceMappingURL=main.css.map */
