--- a/css/main.scss
+++ b/css/main.scss
@@ -2,9 +2,11 @@
 $primary: #ffa500;
 $grey: #E6E6E6;
 $body-bg: #212428;
-$body-color: white;
+$body-color: #d0d0d0;
 $link-decoration: none;
 $h6-font-size:0.8rem;
+$carousel-indicator-width: 12px;
+$carousel-indicator-height: 12px;
 
 $theme-colors:(
     "primary": $primary,
@@ -31,8 +33,11 @@ $theme-colors: map-merge($theme-colors, $custom-color);
 
 :root{
     --bs-body-font-family: 'Nunito';
+    --bs-body-color:#d0d0d0;
 }
-
+h1, h2, h3, h4, h5, h6{
+    color:#fff;
+}
 // *** Header ***
 .top-bar{
     font-size: 0.8rem;
@@ -124,6 +129,18 @@ $theme-colors: map-merge($theme-colors, $custom-color);
 }
 
 // *** Hero ***
+.carousel-indicators [data-bs-target]{
+    background-color:$primary;
+    border-radius:50%;
+}
+.carousel-control-prev-icon {
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23ffa500"%3e%3cpath d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/%3e%3c/svg%3e');
+}
+.carousel-control-next-icon {
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23ffa500"%3e%3cpath d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e');
+}
+
+
 .social-media-hero{
     letter-spacing: 1px;
 }
@@ -188,6 +205,9 @@ $theme-colors: map-merge($theme-colors, $custom-color);
 // *** Features ***
 
 .features{
+    .card-text{
+        color:#d0d0d0;
+    }
     .card-img-top{
         width:30%!important;
     }
@@ -212,7 +232,15 @@ $theme-colors: map-merge($theme-colors, $custom-color);
     }
 }
 // *** Portfolio ***
+select{
+    border: 2px solid #191b1e;
+    background-color: #191b1e;
+    transition: 0.4s;
+    color:#fff;
+    box-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
+}
 .portfolio{
+    
     .card-img-top{
         transition: transform 0.5s;
     }
@@ -242,7 +270,7 @@ $theme-colors: map-merge($theme-colors, $custom-color);
     box-shadow:10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
 }
 .nav-link{
-    color:var(--bs-body-color);
+    color:#fff;
     font-size:18px;
 }
 .nav-tabs .nav-link.active{
@@ -439,4 +467,15 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, in
     border: 1px solid var(--bs-alert-border-color);
     border-radius: 0.375rem;
     position: relative;
+}
+/*** Modal ***/
+.modal-content{
+    background-color:$body-bg;
+    .btn-close {
+        background: transparent url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23fff"%3e%3cpath d="M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z"/%3e%3c/svg%3e') center/1em auto no-repeat;
+    }
+    
+}
+.modal-header{
+    border-bottom:1px solid $primary;
 }
